solc_mutator_ossfuzz_seed_corpus/test_sol/test_84128f5ed3b7ef0bc77e7bc195975b8c91e54d9ffa5c217c657e4f1f1b998f14_7138a669dd95e5c512367df5cd89496fb052bdae_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma abicoder v1;
pragma solidity >= 0.0.0;
function f0(bytes memory i0,uint8 i1)  returns(bool o0)
{ }
function f1(function () external i0,bool i1) 
{
  {
  }


  (i1) = f0("3c5b4e26d30aa31266b9a28e5b4696b88f0f0d68bc6b4697883c34c7e5",46);
  {
(i1) = f0("d978e9b8d8754023",(((~(~((184 ** (~(35) << 172)))) | 46) & 140) / 248));

{



  {


    (i1) = f0("5bdabc3f7ca360d185f7344c755d893de11e8d27",(71 / 118));


  }

}
  }
}
// ----
// TypeError 2271: (su0.sol:287-308): Operator ** not compatible with types int_const 184 and int_const -215...(47 digits omitted)...9056
// TypeError 9553: (su0.sol:279-331): Invalid type for argument in function call. Invalid implicit conversion from rational_const 35 / 62 to uint8 requested.
// TypeError 9553: (su0.sol:415-425): Invalid type for argument in function call. Invalid implicit conversion from rational_const 71 / 118 to uint8 requested.
